# gravastar

./: .hgignore  CMakeLists.txt  CMakeLists.txt~  COPYING.txt  FindAllegro.cmake  Makefile  README.txt  crashes.txt  gravastar  todo.txt
Levels/: level01.cfg  level02.cfg  level03.cfg  level04.cfg  level05.cfg  level06.cfg  level07.cfg  level08.cfg  level09.cfg
cfg/: grav.cfg  grav.cfg~  ip.cfg
cfg/colours/: Blue.cfg  Green.cfg  Red.cfg  White.cfg  Yellow.cfg
networking/: CMakeLists.txt  test.cpp  test_library.cpp  test_library.hpp
src/: CBase.cpp  CBase.hpp  CChrono.cpp  CChrono.hpp  CClientOptions.cpp  CClientOptions.hpp  CDisplayPilot.cpp  CDisplayPilot.hpp  CEffectFactory.hpp  CEngine.cpp  CEngine.hpp  CExplosion.cpp  CExplosion.hpp  CExplosionPause.cpp  CExplosionPause.hpp  CExplosive.cpp  CExplosive.hpp  CExplosiveBluePrint.cpp  CExplosiveBluePrint.hpp  CFlicker.cpp  CFlicker.hpp  CFollowBluePrint.cpp  CFollowBluePrint.hpp  CFollowBluePrintFactory.cpp  CFollowBluePrintFactory.hpp  CFollowFactory.hpp  CFollowSpecial.cpp  CFollowSpecial.hpp  CFollowSpecialFactory.hpp  CFollowStatsDrawer.cpp  CFollowStatsDrawer.hpp  CFollower.cpp  CFollower.hpp  CFourSplitScreens.cpp  CFourSplitScreens.hpp  CFrameTimer.cpp  CFrameTimer.hpp  CGrav.cpp  CGrav.hpp  CGravMedia.cpp  (+185 more)
src/AllegroAPI/: CAllegro.cpp  CAllegro.hpp  CBinaryFile.cpp  CBinaryFile.hpp  CBitmap.cpp  CBitmap.hpp  CCanvas.cpp  CCanvas.hpp  CCircle.cpp  CCircle.hpp  CClock.cpp  CClock.hpp  CClockTimer.cpp  CClockTimer.hpp  CColour.cpp  CColour.hpp  CCursorMenu.hpp  CCycleLeaf.cpp  CCycleLeaf.cpp~  CCycleLeaf.hpp  CCycleString.cpp  CCycleString.hpp  CCycleStringEnter.cpp  CCycleStringEnter.hpp  CDataFile.cpp  CDataFile.hpp  CDirectory.cpp  CDirectory.hpp  CDrawable.hpp  CEraseable.hpp  CFactory.hpp  CFont.cpp  CFont.hpp  CFontTitle.cpp  CFontTitle.hpp  CGameTimer.cpp  CGameTimer.hpp  CIntWrap.cpp  CIntWrap.hpp  CJoystick.cpp  (+69 more)
src/AllegroMP3/: almp3.c  l2tables.h  layer2.c  layer3.c
src/ai/: CActionPicker.cpp  CActionPicker.hpp  CAstar.hpp  CBotAction.cpp  CBotAction.hpp  CDiscusSeek.cpp  CDiscusSeek.hpp  CFlee.cpp  CFlee.hpp  CGammaSeek.cpp  CGammaSeek.hpp  CLunaSeek.cpp  CLunaSeek.hpp  CNimbusSeek.cpp  CNimbusSeek.hpp  CPhoenixSeek.cpp  CPhoenixSeek.hpp  CPilotBot.cpp  CPilotBot.hpp  CPilotInputBot.hpp  CPoint2D.cpp  CPoint2D.hpp  CSearchNode.hpp  CSearchQueue.hpp  CSeekAndDestroy.cpp  CSeekAndDestroy.hpp  CSeekFactory.hpp  CSeekPowerup.cpp  CSeekPowerup.hpp  CTempusSeek.cpp  CTempusSeek.hpp  CThunderSeek.cpp  CThunderSeek.hpp  CVoidharSeek.cpp  CVoidharSeek.hpp  CVulcanSeek.cpp  CVulcanSeek.hpp  CWait.cpp  CWait.hpp  CXbowSeek.cpp  (+1 more)
src/client/: client.cpp  grav_client.cpp  tcp_client.cpp  udp_client.cpp
src/menu/: CClientMenu.cpp  CClientMenu.cpp.orig  CClientMenu.hpp  CControlTypeMenu.cpp  CControlTypeMenu.hpp  CControlsMenu.cpp  CControlsMenu.hpp  CCycleTeam.cpp  CCycleTeam.hpp  CDefineButtonMenu.cpp  CDefineButtonMenu.cpp~  CDefineButtonMenu.hpp  CGravMenu.cpp  CGravMenu.hpp  CLevelCounter.cpp  CLevelCounter.cpp~  CLevelCounter.hpp  CLevelMenu.cpp  CLevelMenu.hpp  CLevelMenuSprite.cpp  CLevelMenuSprite.hpp  CMeleeStart.cpp  CMeleeStart.hpp  CMenuIconCycleTeam.cpp  CMenuIconCycleTeam.hpp  CMenuIconShip.cpp  CMenuIconShip.hpp  CMenuInputBot.cpp  CMenuInputBot.hpp  CMenuInputPilot.cpp  CMenuInputPilot.hpp  CMenuInputRedefine.hpp  COnlineMenu.cpp  COnlineMenu.hpp  COptionsMenu.cpp  COptionsMenu.hpp  CRedefineIcon.cpp  CRedefineIcon.hpp  CRedefineMenu.cpp  CRedefineMenu.hpp  (+27 more)
src/networking/: CClientSocket.cpp  CClientSocket.hpp  CFramePacker.cpp  CFramePacker.hpp  CGravClient.cpp  CGravClient.hpp  CGravConnection.cpp  CGravConnection.hpp  CGravUpdateServer.cpp  CGravUpdateServer.hpp  CLevelSprite.cpp  CLevelSprite.hpp  CMakeLists.txt  CMeleeClient.cpp  CMeleeClient.cpp.orig  CMeleeClient.hpp  CMeleeClient.hpp.orig  CMeleeClientStarter.cpp  CMeleeClientStarter.cpp.orig  CMeleeClientStarter.hpp  CMeleeClientStarter.hpp.orig  CMeleeServer.cpp  CMeleeServer.cpp.orig  CMeleeServer.hpp  CMeleeServer.hpp.orig  CPilotClient.cpp  CPilotClient.hpp  CPilotInputProxy.cpp  CPilotInputProxy.hpp  CPilotProxy.cpp  CPilotProxy.hpp  CPilotServer.cpp  CPilotServer.hpp  CServerSocket.cpp  CServerSocket.hpp  CSpritePacker.cpp  CSpritePacker.hpp  CTcpClient.cpp  CTcpClient.hpp  CTcpConnection.cpp  (+20 more)
src/powerups/: CCoolant.cpp  CCoolant.hpp  CEMB.cpp  CEMB.hpp  CEMP.cpp  CEMP.hpp  CEffectPush.cpp  CEffectPush.hpp  CFlickerEffect.cpp  CFlickerEffect.hpp  CInvulnerable.cpp  CInvulnerable.hpp  CPowerupHull.cpp  CPowerupHull.hpp  CPowerupInvulnerable.cpp  CPowerupInvulnerable.hpp  CPowerupSpecial.cpp  CPowerupSpecial.hpp  CPowerupSuper.cpp  CPowerupSuper.hpp  CPowerupThrust.cpp  CPowerupThrust.hpp  CPowerupTurn.cpp  CPowerupTurn.hpp  CPowerupWeapon.cpp  CPowerupWeapon.hpp  CScramble.cpp  CScramble.hpp  CThrustUp.cpp  CThrustUp.hpp  CTurnUp.cpp  CTurnUp.hpp
src/server/: grav_server.cpp
src/ships/: CAbsorber.cpp  CAbsorber.hpp  CArrow.cpp  CArrow.hpp  CAurora.cpp  CAurora.hpp  CBoomerang.cpp  CBoomerang.hpp  CDeflector.cpp  CDeflector.hpp  CDelta.cpp  CDelta.hpp  CDiscus.cpp  CDiscus.hpp  CGamma.cpp  CGamma.hpp  CHomingMissile.cpp  CHomingMissile.hpp  CLightning.cpp  CLightning.hpp  CLuna.cpp  CLuna.hpp  CNimbus.cpp  CNimbus.hpp  CPhantom.cpp  CPhantom.hpp  CPhoenix.cpp  CPhoenix.hpp  CPulseLaser.cpp  CPulseLaser.hpp  CSoliton.cpp  CSoliton.hpp  CSpecialExplosion.cpp  CSpecialExplosion.hpp  CStasisBomb.cpp  CStasisBomb.hpp  CStealthMine.cpp  CStealthMine.hpp  CSuperBeam.cpp  CSuperBeam.hpp  (+13 more)
src/testing/: TestCase.cpp  TestCase.hpp  TestCaseFactory.cpp  TestCaseFactory.hpp  TestSuite.cpp  TestSuite.hpp  foo.cpp  macros.hpp  test.cpp  test_library.cpp  test_library.hpp  test_main.cpp  unit_tests.cpp
